fixed nav spacing on projects and code cleaning

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
-  background-color:rgb(24, 22, 22);
-  border: 3px solid rgb(178, 227, 241);
+  background-color:rgb(43, 40, 40);
+  border: 1px solid rgb(178, 227, 241);
 }
 
 .column-container {
