--- a/src/Pages/ProjectsPage.css
+++ b/src/Pages/ProjectsPage.css
@@ -16,7 +16,7 @@
     -webkit-text-stroke: 1px black;
     color:rgb(178, 227, 241);
     font-family:'Orbitron', sans-serif;
-    font-size: 40px;
+    font-size: 34px;
     font-weight: bold;
     padding-top: 40px;
 }
@@ -36,8 +36,8 @@
     display:flex;
     flex-direction:column;
     align-items: center;
-    top:50%;
-    left:50%;
+    top:40%;
+    left:40%;
  }
  
 .arrow-box div {
@@ -81,7 +81,6 @@
 .parallax-divider-container {
     background-color:black;
     height:60vh;
-    /* border: 3px solid rgb(178, 227, 241); */
     border-width: 2px 0;
 }
 
@@ -92,6 +91,7 @@
 }
 
 .svg-smaller {
-    transform: scale(0.5);
+    transform: scale(0.45);
+
     
   }
